Bug 1647948. Relax assertion about image aspect ratio to consider that images can go into error state. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D80826